--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/cermak-petr/act-execution-to-xlsx"
   },
   "dependencies": {
-    "apify": "latest",
-    "bluebird": "latest",
-    "underscore": "latest"
+    "apify": "^0.4.37",
+    "bluebird": "^3.5.1",
+    "underscore": "^1.8.3"
   }
 }
